# 🌺💜 Violet: Extended C++ standard library
# Copyright (c) 2025 Noelware, LLC. <team@noelware.org> & other contributors
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

load("@rules_cc//cc:defs.bzl", "cc_binary")

exports_files([
    "PrintArgs.c",
    "PrintEnv.c",
    "BUILD.bazel",
])

_files = glob(["*.c"])

filegroup(
    name = "srcs",
    srcs = _files + ["BUILD.bazel"],
    visibility = ["//:__subpackages__"],
)

cc_binary(
    name = "print_args",
    srcs = ["PrintArgs.c"],
    visibility = [
        "//tests:__subpackages__",
        "//violet:__subpackages__",
    ],
)

cc_binary(
    name = "print_env",
    srcs = ["PrintEnv.c"],
    visibility = [
        "//tests:__subpackages__",
        "//violet:__subpackages__",
    ],
)
