# 🌺💜 Violet: Extended C++ standard library
# Copyright (c) 2025-2026 Noelware, LLC. <team@noelware.org>, et al.
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

load("//buildsystem/bazel:cc.bzl", "violet_cc_library", "violet_cc_test")

package(
    default_visibility = ["//visibility:public"],
)

violet_cc_library(
    name = "container",
    deps = [
        ":optional",
        ":result",
    ],
)

violet_cc_library(
    name = "optional",
    hdrs = ["//include/violet/Container:Optional.h"],
    deps = [
        "//violet",
        "//violet:print",
        "//violet:source_location",
    ],
)

violet_cc_test(
    name = "optional_test",
    srcs = ["//tests/container:Optional.test.cc"],
    deps = [":optional"],
)

violet_cc_library(
    name = "result",
    hdrs = ["//include/violet/Container:Result.h"],
    deps = [
        "//violet",
        "//violet:print",
        "//violet:source_location",
    ],
)

violet_cc_test(
    name = "result_test",
    srcs = [
        "//tests/container:Result.test.cc",
        "//tests/container/result:Err.test.cc",
        "//tests/container/result:Ok.test.cc",
    ],
    deps = [
        ":optional",
        ":result",
    ],
)
