# 🌺💜 Violet: Extended C++ standard library
# Copyright (c) 2025-2026 Noelware, LLC. <team@noelware.org>, et al.
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

load("//buildsystem/bazel:cc.bzl", "violet_cc_library", "violet_cc_test")

package(
    default_visibility = ["//visibility:public"],
)

violet_cc_library(
    name = "any",
    srcs = ["//src/experimental:Any.cc"],
    hdrs = ["//include/violet/Experimental:Any.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//violet/container:optional",
        "//violet/experimental/language:typeid",
        "//violet/support:demangle",
    ],
)

violet_cc_test(
    name = "any_test",
    srcs = ["//tests/experimental:Any.test.cc"],
    deps = [":any"],
)

violet_cc_library(
    name = "mutex",
    srcs = select({
        "//buildsystem/bazel/flags:abseil_enabled": ["//src/experimental:Mutex.abseil.cc"],
        "//conditions:default": ["//src/experimental:Mutex.std.cc"],
    }),
    hdrs = ["//include/violet/Experimental:Mutex.h"],
    defines = select({
        "//buildsystem/bazel/flags:abseil_enabled": ["VIOLET_FEATURE_ABSEIL"],
        "//conditions:default": [],
    }),
    deps = [
        "//violet",
        "//violet/experimental/time:duration",
    ] + select({
        "//buildsystem/bazel/flags:abseil_enabled": [
            "@absl//absl/base:core_headers",
            "@absl//absl/synchronization",
            "@absl//absl/time",
        ],
        "//conditions:default": [],
    }),
)

violet_cc_library(
    name = "numeric",
    hdrs = ["//include/violet/Experimental:Numeric.h"],
    deps = [
        "//violet:anyhow",
        "//violet/container:optional",
    ],
)

violet_cc_test(
    name = "numeric_test",
    srcs = ["//tests/experimental:Numeric.test.cc"],
    deps = [":numeric"],
)

violet_cc_library(
    name = "oneof",
    hdrs = ["//include/violet/Experimental:OneOf.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//violet",
        "//violet/container:optional",
    ],
)

violet_cc_test(
    name = "oneof_test",
    srcs = ["//tests/experimental:OneOf.test.cc"],
    deps = [":oneof"],
)

violet_cc_library(
    name = "own",
    hdrs = ["//include/violet/Experimental:Own.h"],
    deps = ["//violet/container:optional"],
)

violet_cc_test(
    name = "own_test",
    srcs = ["//tests/experimental:Own.test.cc"],
    deps = [":own"],
)

violet_cc_library(
    name = "slice",
    hdrs = ["//include/violet/Experimental:Slice.h"],
    deps = [
        "//violet:iterator",
        "//violet/container:optional",
    ],
)

violet_cc_test(
    name = "slice_test",
    srcs = ["//tests/experimental:Slice.test.cc"],
    deps = [":slice"],
)

violet_cc_library(
    name = "synchronized",
    hdrs = ["//include/violet/Experimental:Synchronized.h"],
    deps = [
        ":mutex",
        "//violet/container:optional",
    ],
)

violet_cc_test(
    name = "synchronized_test",
    srcs = ["//tests/experimental:Synchronized.test.cc"],
    deps = [":synchronized"],
)
