# 🌺💜 Violet: Extended standard library for C++26
# Copyright (c) 2025 Noelware, LLC. <team@noelware.org> & other contributors
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

load("//buildsystem/bazel:cc.bzl", "cc_library", "cc_test")

cc_library(
    name = "filesystem",
    srcs = select({
        "@platforms//os:linux": [
            "//src/filesystem/platform:linux.cc",
            "//src/filesystem/platform:unix.cc",
        ],
        "@platforms//os:macos": [
            "//src/filesystem/platform:macos.cc",
            "//src/filesystem/platform:unix.cc",
        ],
        "@platforms//os:windows": ["//src/filesystem/platform:windows.cc"],
        "//conditions:default": ["//src/filesystem/platform:unsupported.cc"],
    }),
    hdrs = ["//include/violet:Filesystem.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":file",
        ":path",
        ":permissions",
        "//violet",
        "//violet/io:error",
    ],
)

cc_library(
    name = "path",
    srcs = select({
        "@platforms//os:linux": ["//src/filesystem/platform/path:linux.cc"],
        "@platforms//os:macos": ["//src/filesystem/platform/path:macos.cc"],
        "@platforms//os:windows": ["//src/filesystem/platform/path:windows.cc"],
        "//conditions:default": ["//src/filesystem/platform/path:unsupported.cc"],
    }),
    hdrs = ["//include/violet/Filesystem:Path.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//violet",
        "//violet/container:optional",
        "//violet/io:descriptor",
        "//violet/io:error",
    ],
)

cc_test(
    name = "path_test",
    srcs = ["//tests/filesystem:Path.test.cc"],
    deps = [":path"],
)

cc_library(
    name = "permissions",
    srcs = select({
        "@platforms//os:linux": ["//src/filesystem/platform/permissions:unix.cc"],
        "@platforms//os:macos": ["//src/filesystem/platform/permissions:unix.cc"],
        "@platforms//os:windows": ["//src/filesystem/platform/permissions:windows.cc"],
        "//conditions:default": ["//src/filesystem/platform/permissions:unsupported.cc"],
    }),
    hdrs = ["//include/violet/Filesystem:Permissions.h"],
    visibility = ["//visibility:public"],
    deps = ["//violet"],
)

cc_test(
    name = "permissions_test",
    srcs = ["//tests/filesystem:Permissions.test.cc"],
    deps = [":permissions"],
)

cc_library(
    name = "file",
    srcs = select({
        "@platforms//os:linux": [
            "//src/filesystem/platform/file:linux.cc",
            "//src/filesystem/platform/file:unix.cc",
        ],
        "@platforms//os:macos": [
            "//src/filesystem/platform/file:macos.cc",
            "//src/filesystem/platform/file:unix.cc",
        ],
        "@platforms//os:windows": ["//src/filesystem/platform/file:windows.cc"],
        "//conditions:default": ["//src/filesystem/platform/file:unsupported.cc"],
    }),
    hdrs = ["//include/violet/Filesystem:File.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":path",
        ":permissions",
        "//violet",
        "//violet/filesystem/extensions:xattr",
        "//violet/io:descriptor",
        "//violet/support:bitflags",
    ],
)
