# 🌺💜 Violet: Extended standard library for C++26
# Copyright (c) 2025 Noelware, LLC. <team@noelware.org> & other contributors
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

load("//buildsystem/bazel:cc.bzl", "cc_library", "cc_test")

cc_library(
    name = "io",
    visibility = ["//visibility:public"],
    deps = [
        ":error",
        ":read",
        ":stdio",
        ":write",
    ],
)

cc_library(
    name = "error",
    srcs = select({
        "@platforms//os:linux": ["impl/error/unix.cpp"],
        "@platforms//os:macos": ["impl/error/unix.cpp"],
        "@platforms//os:windows": ["impl/error/windows.cpp"],
        "//conditions:default": ["impl/error/unsupported.cpp"],
    }),
    hdrs = ["Error.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//violet",
        "//violet/container",
        "//violet/support:demangle",
    ],
)

cc_library(
    name = "read",
    hdrs = ["Read.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":error",
        "//violet",
        "//violet/container:result",
    ],
)

cc_library(
    name = "write",
    hdrs = ["Write.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":error",
        "//violet",
        "//violet/container:result",
    ],
)

cc_library(
    name = "stdio",
    srcs = select({
        "@platforms//os:windows": ["impl/stdio/windows.cpp"],
        "//conditions:default": ["impl/stdio.cpp"],
    }),
    hdrs = ["Stdio.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":error",
        ":read",
        ":write",
        "//violet",
        "//violet/container:result",
        "//violet/support:stringref",
    ],
)

cc_test(
    name = "error_test",
    size = "small",
    srcs = ["tests/Error.test.cpp"],
    visibility = ["//visibility:public"],
    deps = [
        ":error",
        "//violet/container:result",
    ],
)
