# 🌺💜 Violet: Extended standard library for C++26
# Copyright (c) 2025 Noelware, LLC. <team@noelware.org> & other contributors
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

load("//buildsystem/bazel:cc.bzl", "cc_library", "cc_test")

exports_files(
    ["BUILD.bazel"],
    visibility = ["//:__subpackages__"],
)

cc_library(
    name = "error",
    srcs = ["//src/io:error.cc"] + select({
        "@platforms//os:linux": ["//src/io/platform/error:unix.cc"],
        "@platforms//os:macos": ["//src/io/platform/error:unix.cc"],
        "@platforms//os:windows": ["//src/io/platform/error:windows.cc"],
        "//conditions:default": ["//src/io/platform/error:unsupported.cc"],
    }),
    hdrs = ["//include/violet/IO:Error.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//violet",
        "//violet/container:optional",
        "//violet/container:result",
    ],
)

cc_library(
    name = "read",
    srcs = ["//src/io:read.cc"],
    hdrs = ["//include/violet/IO:Read.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":error",
        "//violet",
    ],
)

cc_test(
    name = "read_test",
    srcs = ["//tests/io:Read.test.cc"],
    deps = [":read"],
)

cc_library(
    name = "write",
    srcs = ["//src/io:write.cc"],
    hdrs = ["//include/violet/IO:Write.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":error",
        "//violet",
    ],
)

cc_test(
    name = "write_test",
    srcs = ["//tests/io:Write.test.cc"],
    deps = [":write"],
)

cc_library(
    name = "descriptor",
    srcs = select({
        "@platforms//os:linux": ["//src/io/platform/descriptor:unix.cc"],
        "@platforms//os:macos": ["//src/io/platform/descriptor:unix.cc"],
        "@platforms//os:windows": ["//src/io/platform/descriptor:windows.cc"],
        "//conditions:default": ["//src/io/platform/descriptor:unsupported.cc"],
    }),
    hdrs = ["//include/violet/IO:Descriptor.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":read",
        ":write",
        "//violet",
    ],
)
