# 🌺💜 Violet: Extended standard library for C++26
# Copyright (c) 2025 Noelware, LLC. <team@noelware.org> & other contributors
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//buildsystem/bazel:cc.bzl", "cc_library", "cc_test")

cc_library(
    name = "stdio",
    srcs = ["impl/stdio.cpp"] + select({
        "@platforms//os:linux": ["impl/stdio/unix.cpp"],
        "@platforms//os:macos": ["impl/stdio/unix.cpp"],
        "@platforms//os:windows": ["impl/stdio/windows.cpp"],
        "//conditions:default": ["impl/subprocess/unsupported.cpp"],
    }),
    hdrs = ["Stdio.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//violet",
        "//violet/io:descriptor",
        "//violet/io:error",
        "//violet/io:read",
        "//violet/io:write",
    ],
)

cc_library(
    name = "subprocess",
    srcs = ["impl/subprocess.cpp"] + select({
        "@platforms//os:linux": ["impl/subprocess/unix.cpp"],
        "@platforms//os:macos": ["impl/subprocess/unix.cpp"],
        "@platforms//os:windows": ["impl/subprocess/windows.cpp"],
        "//conditions:default": ["impl/subprocess/unsupported.cpp"],
    }),
    hdrs = ["Subprocess.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":stdio",
        "//violet",
        "//violet/container:optional",
        "//violet/filesystem:path",
        "//violet/io:error",
        "@abseil-cpp//absl/container:flat_hash_map",
    ],
)

cc_binary(
    name = "helper",
    srcs = ["tests/subprocess_helper.cc"],
    visibility = ["//visibility:private"],
)

cc_test(
    name = "test",
    srcs = select({
        "@platforms//os:linux": ["tests/subprocess/Unix.cpp"],
        "@platforms//os:macos": ["tests/subprocess/Unix.cpp"],
        "@platforms//os:windows": ["tests/subprocess/Windows.cpp"],
        "//conditions:default": ["tests/subprocess/Unsupported.cpp"],
    }),
    data = [":helper"],
    deps = ["@bazel_tools//tools/cpp/runfiles"],
)
