# 🌺💜 Violet: Extended C++ standard library
# Copyright (c) 2025-2026 Noelware, LLC. <team@noelware.org>, et al.
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

load("//buildsystem/bazel:cc.bzl", "cc_library", "cc_test")

exports_files(
    ["BUILD.bazel"],
    visibility = ["//:__subpackages__"],
)

cc_library(
    name = "subprocess",
    srcs = ["//src:subprocess.cc"] + select({
        "@platforms//os:linux": [
            "//src/subprocess:linux.cc",
            "//src/subprocess:unix.cc",
        ],
        "@platforms//os:macos": [
            "//src/subprocess:macos.cc",
            "//src/subprocess:unix.cc",
        ],
        "@platforms//os:windows": ["//src/subprocess:windows.cc"],
        "//conditions:default": ["//src/subprocess:unsupported.cc"],
    }),
    hdrs = ["//include/violet:Subprocess.h"],
    deps = [
        "//violet",
        "//violet/container:optional",
        "//violet/filesystem:path",
        "//violet/io:descriptor",
        "//violet/io:error",
        "//violet/io:read",
        "//violet/io:write",
    ],
)

cc_test(
    name = "subprocess_test",
    srcs = [
        "//tests/subprocess:Subprocess.test.cc",
        "//tests/subprocess:gtest.main.cc",
    ],
    with_gtest_main = False,
    deps = [
        ":subprocess",
        "//tests/helper/runfiles",
    ],
)

cc_test(
    name = "unix_test",
    srcs = [
        "//tests/subprocess:gtest.main.cc",
        "//tests/subprocess/platform:Subprocess.unix.test.cc",
    ],
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "@platforms//os:macos": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    with_gtest_main = False,
    deps = [
        ":subprocess",
        "//tests/helper/runfiles",
    ],
)

cc_test(
    name = "windows_test",
    srcs = [
        "//tests/subprocess:gtest.main.cc",
        "//tests/subprocess/platform:Subprocess.windows.test.cc",
    ],
    target_compatible_with = select({
        "@platforms//os:windows": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    with_gtest_main = False,
    deps = [
        ":subprocess",
        "//tests/helper/runfiles",
    ],
)
